--- a/src/app/header/top-header.html
+++ b/src/app/header/top-header.html
@@ -15,17 +15,17 @@
           <ion-row>
             <ion-col>
               <a href = "">
-                <img src = "https://github.com/bryanpumper/ionic-4-angular-8-start-template-bryanpumper/blob/master/src/app/images/business.png?raw=true">
+                <img src = "https://i.ibb.co/hRRxmMC/business.png">
               Manage <br>ILAS Funds</a>
             </ion-col>
             <ion-col>
               <a href = "">
-                <img src = "https://github.com/bryanpumper/ionic-4-angular-8-start-template-bryanpumper/blob/master/src/app/images/interface.png?raw=true">
+                <img src = "https://i.ibb.co/v4LL3Jc/interface.png">
                Claims</a>
             </ion-col>
             <ion-col>
               <a href = "#/tab/policy_servicing">
-              <img src = "https://github.com/bryanpumper/ionic-4-angular-8-start-template-bryanpumper/blob/master/src/app/images/business.png?raw=true">
+              <img src = "https://i.ibb.co/cYtng6n/hand-paper.png">
               Policy <br>Servicing</a>
             </ion-col>
           </ion-row>
