--- a/src/app/header/top-header.html
+++ b/src/app/header/top-header.html
@@ -14,17 +14,17 @@
 
           <ion-row>
             <ion-col>
-              <a href = "">
+              <a href = "" class = "ico_ns">
                 <img src = "https://i.ibb.co/hRRxmMC/business.png">
               Manage <br>ILAS Funds</a>
             </ion-col>
             <ion-col>
-              <a href = "">
+              <a href = "" class = "ico_ns">
                 <img src = "https://i.ibb.co/v4LL3Jc/interface.png">
                Claims</a>
             </ion-col>
             <ion-col>
-              <a href = "#/tab/policy_servicing">
+              <a href = "#/tab/policy_servicing" class = "ico_ns">
               <img src = "https://i.ibb.co/cYtng6n/hand-paper.png">
               Policy <br>Servicing</a>
             </ion-col>
