--- a/src/styles.css
+++ b/src/styles.css
@@ -147,7 +147,6 @@ body{
 .center_user_contents a {
     display: inline-block;
     width: 33%;
-    background: #cecece4f;
     font-size: 12px;
     float: left;
     color: #202020;
@@ -156,6 +155,14 @@ body{
     position: relative;
     top: 5em;
 }
+a.ico_ns:nth-of-type(2) img{
+    padding-top:1.4em;
+}
+a.ico_ns img{
+    border:none;
+    width:auto;
+}
+
 
 /*Mid Contents*/
 .mid_container h4 i {
