--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,20 +1,61 @@
 <ion-content>
 
-
-  <div [innerHtml] = 'test'></div>
-
-<p style = "padding:3em;">
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
-
-<p style = "padding:3em;">
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
+<div [innerHtml] = 'topheader'></div>
 
 
+    <ion-grid class = "mid_container">
+      <ion-row>
+        <ion-col>
+        <h4><a href = "#/tab/policies">Coverage from 4 Policies <i class="fa fa-chevron-right"></i></a></h4>
+        </ion-col>
+      </ion-row>
+
+      <ion-row class = "level_thumb">
+        <ion-col>
+        <img src = "https://i.ibb.co/MhYT6Gy/ico-thumb1.png">
+        <b>Life</b>
+        <span>HKD 6,146,066</span>
+        </ion-col>
+        <ion-col>
+        <img src = "https://i.ibb.co/rdmZtKs/ico-thumb2.png">
+        <b>Critical Illness</b>
+        <span>up to HKD 1,00,00</span>
+        </ion-col>
+      </ion-row>  
+
+      <ion-row class = "level_thumb">
+        <ion-col>
+        <img src = "https://i.ibb.co/LJxPh4D/ico-thumb3.png">
+        <b>Medical & Hosp.</b>
+        <span>up to: HKD 721, 800/year, HKD 600,000/disability</span>
+        </ion-col>
+        <ion-col>
+        <img src = "https://i.ibb.co/41xxBWV/ico-thumb4.png">
+        <b>Accident</b>
+        <span>up to HKD 1,000,000</span>
+        </ion-col>
+      </ion-row>  
+
+      <ion-row class = "level_thumb">
+        <ion-col>
+        <small class = "small_grey">*Additional coverages detailed in provision</small>
+        </ion-col>
+      </ion-row>
 
 
+    </ion-grid>
 
+    <ion-grid class = "mid_container prefoot">
+      <ion-row>
+        <ion-col>
+        <h5>Assets <span>Total <b>HKD 255,309</b></span></h5>
+        <ul class = "bottom_links">
+        <li><a href = "#">Investment-Linked <span><b>HKD 10,539</b> <i class="fa fa-chevron-right"></i></span></a></li>
+        <li><a href = "#">Savings <span><b>HKD 161,688</b> <i class="fa fa-chevron-right"></i></span></a></li>
+        </ul>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 
 
 </ion-content>
