--- a/src/styles.css
+++ b/src/styles.css
@@ -181,7 +181,7 @@ a.ico_ns img{
     font-family: 'Open Sans', sans-serif;
     margin-bottom: 1em;
     margin-top:0;
-    padding-top: 0;
+    padding-top: ;
     
 }
 .mid_container h4 a {
@@ -228,6 +228,10 @@ a.ico_ns img{
     font-weight: 600;
     border-bottom: 1px solid #cecece;
     padding-bottom: 0.5em;
+}
+.prefoot ul {
+    list-style: none;
+    padding-left: 0;
 }
 
 .bottom_links a span b {
