--- a/src/styles.css
+++ b/src/styles.css
@@ -181,7 +181,7 @@ a.ico_ns img{
     font-family: 'Open Sans', sans-serif;
     margin-bottom: 1em;
     margin-top:0;
-    padding-top: ;
+    padding-top: 30px;
     
 }
 .mid_container h4 a {
@@ -310,7 +310,7 @@ a.item i {
     text-decoration: none;
     color: #000;
     font-size: 15px;
-    padding: 1.3em 2.5em;
+    padding: 1.3em 2.em;
 }
 .policy_servicing .bottom_links a span i {
     float: right;
