--- a/src/app/header/top-header.html
+++ b/src/app/header/top-header.html
@@ -27,7 +27,7 @@
                Claims</a>
             </ion-col>
             <ion-col>
-              <a routerLink = "../../tabs/policy_servicing" class = "ico_ns">
+              <a routerLink = "../../policies-servicing" class = "ico_ns">
               <img src = "https://i.ibb.co/cYtng6n/hand-paper.png">
               Policy <br>Servicing</a>
             </ion-col>
